<resources>
    <string name="app_name">Budgetly</string>

    <string name="bottom_nav_label_expenses">Расходы</string>
    <string name="bottom_nav_label_incomes">Доходы</string>
    <string name="bottom_nav_label_score">Счет</string>
    <string name="bottom_nav_label_articles">Статьи</string>
    <string name="bottom_nav_label_settings">Настройки</string>

    <string name="splash_screen_label">Splash screen</string>

    <string name="expenses_top_bar_title">Расходы сегодня</string>
    <string name="expenses_top_bar_action_description">История</string>
    <string name="incomes_top_bar_title">Доходы сегодня</string>
    <string name="history_top_bar_title">Моя история</string>
    <string name="account_top_bar_title">Мой счёт</string>
    <string name="account_top_bar_action_description">Редактировать</string>
    <string name="articles_top_bar_title">Мои статьи</string>
    <string name="settings_top_bar_title">Настройки</string>
    <string name="fab_description">Добавить</string>
    <string name="account_ic_arrow_description">Перейти</string>
    <string name="account_currency_title">Валюта</string>
    <string name="screen_settings_dark_theme_label">Тёмная тема</string>

    <string name="dialog_ok">ОК</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_clear">Очистить</string>
    <string name="exception_no_internet">Нет подключения к интернету</string>
    <string name="error_no_internet">Нет интернета. Проверьте подключение сети</string>
    <string name="error_server">Ошибка сервера. Повторите позже</string>
    <string name="error_unknown">Неизвестная ошибка. Повторите позже</string>
    <string name="retry_button_text">Повторить</string>
    <string name="account_balance_title">Баланс</string>
    <string name="history_action_description">История</string>
    <string name="analyze_action_description">Анализ</string>
    <string name="edit_action_description">Редактировать</string>
    <string name="back_action_description">Назад</string>
    <string name="history_start_date">Начало</string>
    <string name="history_end_date">Конец</string>
    <string name="history_total_sum">Сумма</string>
    <string name="navigate_action_description">Перейти к настройке</string>

    <string name="setting_dark_theme">Тёмная тема</string>
    <string name="setting_primary_color">Основной цвет</string>
    <string name="setting_sounds">Звуки</string>
    <string name="setting_haptics">Хаптики</string>
    <string name="setting_passcode">Код пароль</string>
    <string name="setting_sync">Синхронизация</string>
    <string name="setting_language">Язык</string>
    <string name="setting_about">О программе</string>
    <string name="edit_account_name_label">Название счёта</string>
    <string name="edit_account_balance_label">Баланс</string>
    <string name="edit_account_top_bar_title">Редактирование счета</string>
    <string name="save_action_description">Сохранить</string>
    <string name="edit_account_currency_label">Валюта</string>
    <string name="edit_account_currency_change_cancel">Отмена выбора валюты</string>
    <string name="edit_account_cancel_button">Отмена редактирования счета</string>
    <string name="transaction_details_account">Счет</string>
    <string name="transaction_details_category">Статья</string>
    <string name="transaction_details_date">Дата</string>
    <string name="transaction_details_time">Время</string>
    <string name="transaction_details_edit_income">Мой доход</string>
    <string name="transaction_details_edit_expense">Мой расход</string>
    <string name="transaction_details_create_income">Создание дохода</string>
    <string name="transaction_details_create_expense">Создание расхода</string>
    <string name="transaction_details_amount">Сумма</string>
    <string name="transaction_details_comment_placeholder">Комментарий</string>
    <string name="transaction_details_delete_button">Удалить</string>
    <string name="dialog_error_title">Не удалось сохранить</string>
    <string name="transaction_details_delete_confirm_title">Подтверждение удаления</string>
    <string name="transaction_details_delete_confirm_text">Вы точно хотите удалить?</string>
    <string name="dialog_delete">Удалить</string>
    <string name="transaction_details_delete_income_button">Удалить доход</string>
    <string name="transaction_details_delete_expense_button">Удалить расход</string>
    <string name="transaction_details_edit_cancel_button">Отмена добавления/редактирования операции</string>
    <string name="analyze_no_data">Нет данных</string>

    <string name="color_name_green">Зеленый (стандартный)</string>
    <string name="color_name_blue">Синий</string>
    <string name="color_name_orange">Оранжевый</string>
    <string name="color_is_selected_description">Выбранный цвет</string>

    <string name="haptics_enable_toggle">Вибрация</string>
    <string name="haptic_effect_click">Клик</string>
    <string name="haptic_effect_tick">Тик</string>
    <string name="haptic_effect_double_click">Двойной клик</string>
    <string name="haptic_effect_is_selected_description">Выбранный эффект</string>

    <string name="pincode_create_title">Создайте пин-код</string>
    <string name="pincode_confirm_title">Подтвердите пин-код</string>
    <string name="pincode_check_title">Введите пин-код</string>
    <string name="pincode_error_mismatch">Пин-коды не совпадают. Попробуйте еще раз.</string>
    <string name="pincode_error_incorrect">Неверный пин-код</string>
    <string name="pincode_delete_button_description">Удалить символ</string>
    <string name="pincode_check_to_change_title">Введите старый пин-код</string>
    <string name="setting_passcode_subtitle_set">Установлен</string>
    <string name="setting_passcode_subtitle_not_set">Не установлен</string>
    <string name="pincode_delete_title">Введите пин-код для удаления</string>
    <string name="setting_passcode_set">Установить пин-код</string>
    <string name="setting_passcode_change">Изменить пин-код</string>
    <string name="setting_passcode_delete">Удалить пин-код</string>

    <string name="sync_interval_5_minutes">Каждые 5 минут</string>
    <string name="sync_interval_30_minutes">Каждые 30 минут</string>
    <string name="sync_interval_1_hour">Каждый час</string>
    <string name="sync_interval_3_hours">Каждые 3 часа</string>
    <string name="setting_sync_frequency">Частота синхронизации</string>

    <string name="language_is_selected_description">Выбранный язык</string>
    <string name="language_russian">Русский</string>
    <string name="language_english">Английский</string>

    <string name="about_app_version">Версия приложения</string>
    <string name="about_app_last_update">Последнее обновление</string>
    <string name="total_ammount_title">Всего</string>

    <string name="analysis_income_title">Анализ доходов</string>
    <string name="analysis_expenses_title">Анализ расходов</string>

    <string name="default_analysis_title">Анализ</string>

    <string name="period_start_label">Период: начало</string>
    <string name="period_end_label">Период: конец</string>
    <string name="total_amount_label">Сумма</string>
    <string name="articles_search_placeholder">Найти статью</string>

    <string name="account_name_title">Название счета</string>
    <string name="pincode_back_button_description">Назад</string>
</resources>