...
    val uiState by viewModel.uiState.collectAsStateWithLifecycle()

    LazyColumn(
        modifier = modifier
            .fillMaxSize()
            .background(MaterialTheme.colorScheme.background)
            .testTag("SettingsScreenContainer") // Добавляем testTag для поиска в тесте
    ) {
        items(
            items = uiState.settingsItems,
            key = { it.id }
        ) { item ->
            when (item.type) {
                SettingType.THEME_SWITCH -> {
                    BaseListItem(
                        title = stringResource(id = item.titleRes),
                        trail = {
                            Switch(
                                checked = uiState.isDarkThemeEnabled,
                                modifier = Modifier.testTag("DarkThemeSwitch"),
                                onCheckedChange = viewModel::onThemeChanged
                            )
                        }
                    )
                }

...
